bugfix: buttons no longer jump when clicked

--- a/quizzical/src/style.css
+++ b/quizzical/src/style.css
@@ -107,7 +107,7 @@ button:disabled {
 }
 .quiz--answer-radios input:checked + label {
   background-color: #D6DBF5;
-  border: none;
+  border-color: transparent;
 }
 
 hr {
